Mudança estrutura do projeto, e endpoint getAllSurveys
