# cmd/api/swagger/swagger.json
@@ -4,16 +4,14 @@
         "contact": {}
     },
     "paths": {
-        "/": {
+        "/health": {
             "get": {
-                "description": "Retorna uma mensagem simples \"Teste Farma\"",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Exemplos"
+                    "Health"
                 ],
-                "summary": "Exemplo de endpoint Hello World",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -27,23 +25,21 @@
                 }
             }
         },
-        "/health": {
+        "/survey": {
             "get": {
-                "description": "Retorna o status de saúde do banco de dados",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Saúde"
+                    "Survey"
                 ],
-                "summary": "Endpoint de verificação de saúde",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/types.Survey"
                             }
                         }
                     }
@@ -55,7 +51,9 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Exemplo de endpoint Hello World",
+                "tags": [
+                    "Test"
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -66,6 +64,22 @@
                             }
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "types.Survey": {
+            "type": "object",
+            "properties": {
+                "dataCriacao": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "nome": {
+                    "type": "string"
                 }
             }
         }
