# internal/types/survey.go
@@ -1,0 +1,7 @@
+package types
+
+type Survey struct {
+	Id          int    `json:"id"`
+	Nome        string `json:"nome"`
+	DataCriacao string `json:"dataCriacao"`
+}
